# asciinema-to-svg

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  demo.cast  tags.json
.github/workflows/: ci.yml
config/: sizes.json
docs/: README.md  architecture.md  cast-support.md  cli-reference.md  development.md  powerline-remapping.md  rendering.md  statusline-rendering.md  theme-format.md
docs/icons/: README.md  arrows.md  buildings.md  business.md  communication.md  design.md  development.md  device.md  document.md  editor.md  finance.md  food.md  game-sports.md  health-medical.md  logos.md  map.md  media.md  others.md  system.md  user-faces.md  weather.md
samples/: 650158.cast  wibble.cast
scripts/: generate-icon-docs.sh
src/: cast.rs  cli.rs  icons.rs  main.rs  theme.rs
src/render/: mod.rs  statusline.rs
src/terminal/: ansi_parser.rs  mod.rs  screen_buffer.rs
themes/: linux.json  macos.json  powershell.json
