[package]
name = "asciinema-to-svg"
version = "0.0.2"
edition = "2024"
description = "Convert asciinema v2 and v3 casts into themed animated SVG terminal recordings"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
phf = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
phf_codegen = "0.11"

[dev-dependencies]
tempfile = "3"
